@@ -1,5 +1,10 @@
 2013-09-04  Jan Hubicka  <jh@suse.cz>
 
+	* tree.c (types_same_for_odr): Drop overactive check.
+	* ipa-devirt.c (hash_type_name): Likewise.
+
+2013-09-04  Jan Hubicka  <jh@suse.cz>
+
 	* cgraphunit.c (walk_polymorphic_call_targets): Break out from ...
 	(analyze_functions): ... here.
 
